# h8

./: LICENSE.md  README.md
ecd/: .gitignore  Dockerfile.saladcloud  README.md  docker-compose.yml  pyproject.toml
ecd/configs/dataset/: default.yaml
ecd/configs/debug/: default.yaml
ecd/configs/index/: default.yaml
ecd/configs/model/: default.yaml  track_b.yaml
ecd/configs/sweep/: default.yaml  hardneg.yaml  quick_hyper.yaml  trackA_grid.yaml  trackB_grid.yaml
ecd/configs/train/: default.yaml
ecd/docs/: SALADCLOUD_DEPLOY.md  TRACK_B_V1.md  VASTAI_DEPLOY.md  track_b_runs.md
ecd/scripts/: check_trackb_sanity.py  cloud_deploy.py  debug_sanity.py  extract_trackb_metrics.py  prepare_data.py  progress_bar.sh  run_end_to_end.py  run_sweep.py  run_track_a.sh  run_track_b.sh  saladcloud_deploy.sh  saladcloud_launch.py  sweep_hardneg.py  sweep_quick_hyper.py  test_trackb_smoke.sh  train_student.py  vastai_deploy.sh  vastai_launch.py  vastai_onstart.sh
ecd/src/ecd/: __init__.py
ecd/src/ecd/data/: dataset.py
ecd/src/ecd/embed/: cache.py
ecd/src/ecd/index/: ann.py  pipeline.py
ecd/src/ecd/losses/: distill.py  mix.py  rank.py  struct.py
ecd/src/ecd/metrics/: retrieval.py  structural.py
ecd/src/ecd/models/: student.py
ecd/src/ecd/plots/: make_plots.py
ecd/tests/: test_metrics.py  test_seed_repro.py  test_track_b.py  test_train_config_null_intervals.py
rndplc/: .gitignore  README.md  pyproject.toml
rndplc/data/: tiny.txt
rndplc/retnet_mlx/: __init__.py  block.py  config.py  decay_policy.py  model.py  norms.py  ops.py  retention.py  xpos.py
rndplc/scripts/: bench.py  generate.py  paper_figs.nu  paper_figs.py  paper_figs.sh  train_char_lm.py
rndplc/src/retnet_mlx/: __init__.py
rndplc/tests/: test_decay_policy_monotonic.py  test_general_alpha_equivalence_smallT.py  test_imports.py  test_model_forward_step.py  test_retention_equivalence_fixed_and_b1.py  test_tokenwise_groupnorm.py
rndplc/typings/mlx/: utils.pyi
(+41 files in other folders)
