[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retnet-mlx"
version = "0.1.0"
description = "RetNet-style multi-scale retention in MLX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "mlx",
  "numpy",
  "tqdm",
  "pytest",
  "matplotlib>=3.10.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["retnet_mlx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
